# qdrtcsKahanWepa

./: CMakeLists.txt  README.md
inc/: solver.h
src/: solver.cpp  test.cpp
