cmake_minimum_required(VERSION 3.22)
project(qdrtcsKahanWepa)
set(CMAKE_CXX_STANDARD 23)

include_directories(inc)
find_package(OpenMP)
include_directories(${PROJECT_SOURCE_DIR}/excerpt)
link_directories(${PROJECT_SOURCE_DIR}/excerpt)
link_libraries(OpenMP::OpenMP_CXX)
add_executable(qdrtcsKahanWepa src/test.cpp src/solver.cpp ${PROJECT_SOURCE_DIR}/excerpt/excerpt.cpp)